
INCLUDE_DIRECTORIES     (${CMAKE_CURRENT_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES_ISPC(${CMAKE_CURRENT_SOURCE_DIR}/common)

ADD_SUBDIRECTORY(common)

SET(BUILD_TUTORIALS      ON CACHE BOOL "Enable to build Embree tutorials")
SET(BUILD_TUTORIALS_ISPC ON CACHE BOOL "Enable to build Embree ISPC tutorials")
IF (BUILD_TUTORIALS OR BUILD_TUTORIALS_ISPC)
  SET (__XEON__ 1)
  ADD_SUBDIRECTORY(test00)
  #  ADD_SUBDIRECTORY(tutorial00)
  #  ADD_SUBDIRECTORY(tutorial01)
  #  ADD_SUBDIRECTORY(tutorial02)
  #  ADD_SUBDIRECTORY(tutorial03)
  #  ADD_SUBDIRECTORY(tutorial04)
  #  ADD_SUBDIRECTORY(tutorial05)
  #  ADD_SUBDIRECTORY(tutorial06)
  #  ADD_SUBDIRECTORY(tutorial07)
ENDIF()

IF (BUILD_TUTORIALS)
  ADD_SUBDIRECTORY(tutorial08)
ENDIF()

IF (XEON_PHI_ISA)
  SET (__XEON__ 0)
  SET (__HOST__ 1)
  ADD_SUBDIRECTORY(tutorial00 tutorial00_host)
  ADD_SUBDIRECTORY(tutorial01 tutorial01_host)
  ADD_SUBDIRECTORY(tutorial02 tutorial02_host)
  ADD_SUBDIRECTORY(tutorial03 tutorial03_host)
  ADD_SUBDIRECTORY(tutorial04 tutorial04_host)
  ADD_SUBDIRECTORY(tutorial05 tutorial05_host)
  ADD_SUBDIRECTORY(tutorial06 tutorial06_host)
  ADD_SUBDIRECTORY(tutorial07 tutorial07_host)
  SET (__HOST__ 0)
  ADD_SUBDIRECTORY(tutorial00 tutorial00_device)
  ADD_SUBDIRECTORY(tutorial01 tutorial01_device)
  ADD_SUBDIRECTORY(tutorial02 tutorial02_device)
  ADD_SUBDIRECTORY(tutorial03 tutorial03_device)
  ADD_SUBDIRECTORY(tutorial04 tutorial04_device)
  ADD_SUBDIRECTORY(tutorial05 tutorial05_device)
  ADD_SUBDIRECTORY(tutorial06 tutorial06_device)
  ADD_SUBDIRECTORY(tutorial07 tutorial07_device)
ENDIF()
